@@ -400,3 +400,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 .wwebjs_cache/
+python_backend/users_data.json
